--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 			<header class="header">
 				<a class="header__btn" href=""></a>
 				<div class="header__title">Taecraft Elementary</div>
+				<div class="add">
+					<span class="vertical"></span>
+					<span class="horizontal"></span>
+				</div>
 			</header>
 			<div class="user">
 				<a href="#" class="user__pic">
