--- a/index.html
+++ b/index.html
@@ -17,17 +17,60 @@
 				<a href="#" class="nav__label">New notebook</a>
 			</div>
 			<div class="nav__content">
-				<a href="#" class="nav__item">Taucraft Elementary</a>
-				<a href="#" class="nav__item">My Dictionary</a>
-				<a href="#" class="nav__item">Grammatic</a>
-				<a href="#" class="nav__item">New notebook 1</a>
+				<div class="nav__item" contenteditable="true">
+					Taucraft Elementary
+					<div class="nav__item-point">
+						<span></span>
+						<span></span>
+						<span></span>
+						<div class="nav__item-popup">
+							<a href="#" class="nav__item-link">Rename</a>
+							<a href="#" class="nav__item-link">Remove</a>
+						</div>
+					</div>
+				</div>
+				<div class="nav__item" contenteditable="true">My Dictionary
+					<div class="nav__item-point">
+						<span></span>
+						<span></span>
+						<span></span>
+						<div class="nav__item-popup">
+							<a href="#" class="nav__item-link">Rename</a>
+							<a href="#" class="nav__item-link">Remove</a>
+						</div>
+					</div>					
+				</div>
+				<div class="nav__item" contenteditable="true">Grammatic
+					<div class="nav__item-point">
+						<span></span>
+						<span></span>
+						<span></span>
+						<div class="nav__item-popup">
+							<a href="#" class="nav__item-link">Rename</a>
+							<a href="#" class="nav__item-link">Remove</a>
+						</div>
+					</div>
+				</div>
+				<div class="nav__item" contenteditable="true">New notebook 1
+					<div class="nav__item-point">
+						<span></span>
+						<span></span>
+						<span></span>
+						<div class="nav__item-popup">
+							<a href="#" class="nav__item-link">Rename</a>
+							<a href="#" class="nav__item-link">Remove</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</nav>
 		<!--/.nav-->
 		<div class="main">
 			<header class="header">
-				<a class="header__btn" href=""></a>
-				<div class="header__title">Taecraft Elementary</div>
+				<div class="header__title">
+					<span class="header__btn"><em></em></span>
+					<div class="header__text">Taucraft Elementary</div>
+				</div>
 				<div class="add">
 					<span class="vertical"></span>
 					<span class="horizontal"></span>
