--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<span class="header__btn"><em></em></span>
 					<div class="header__text">Taucraft Elementary</div>
 				</div>
-				<div class="add">
+				<div class="add-min">
 					<span class="vertical"></span>
 					<span class="horizontal"></span>
 				</div>
