--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>lingnote</title>
 	<meta name="viewport" content="initial-scale=1"/>
 	<link rel="stylesheet" media="screen" href="css/screen.css" >
-	
+	<script src="js/lib/head.js" data-headjs-load="js/init.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>	
 </head>
 <body>
 	<div class="wrap">
