--- a/index.html
+++ b/index.html
@@ -19,47 +19,67 @@
 			<div class="nav__content">
 				<div class="nav__item" contenteditable="true">
 					Taucraft Elementary
-					<div class="nav__item-point">
+					<div class="nav__item-point" contenteditable="false">
 						<span></span>
 						<span></span>
 						<span></span>
-						<div class="nav__item-popup">
+					</div>
+					<div class="nav__item-popup" contenteditable="false">
+						<div class="nav__item-roll nav__item-lose">
+							You will lose 24 points	
+						</div>						
+						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
 							<a href="#" class="nav__item-link">Remove</a>
-						</div>
+						</div>	
 					</div>
 				</div>
 				<div class="nav__item" contenteditable="true">My Dictionary
-					<div class="nav__item-point">
+					<div class="nav__item-point" contenteditable="false">
 						<span></span>
 						<span></span>
 						<span></span>
-						<div class="nav__item-popup">
+					</div>					
+					<div class="nav__item-popup" contenteditable="false">
+						<div class="nav__item-roll nav__item-lose">
+							You will lose 24 points	
+						</div>						
+						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
 							<a href="#" class="nav__item-link">Remove</a>
-						</div>
-					</div>					
+						</div>	
+					</div>
 				</div>
 				<div class="nav__item" contenteditable="true">Grammatic
-					<div class="nav__item-point">
+					<div class="nav__item-point" contenteditable="false">
 						<span></span>
 						<span></span>
 						<span></span>
-						<div class="nav__item-popup">
+					</div>
+					<div class="nav__item-popup" contenteditable="false">
+						<div class="nav__item-roll nav__item-lose">
+							You will lose 24 points	
+						</div>						
+						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
 							<a href="#" class="nav__item-link">Remove</a>
-						</div>
+						</div>	
 					</div>
 				</div>
 				<div class="nav__item" contenteditable="true">New notebook 1
-					<div class="nav__item-point">
+					<div class="nav__item-point" contenteditable="false">
 						<span></span>
 						<span></span>
 						<span></span>
-						<div class="nav__item-popup">
+					</div>
+					<div class="nav__item-popup" contenteditable="false">
+						<div class="nav__item-roll nav__item-lose">
+							You will lose 24 points	
+						</div>						
+						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
 							<a href="#" class="nav__item-link">Remove</a>
-						</div>
+						</div>	
 					</div>
 				</div>
 			</div>
