--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 				<a href="#" class="nav__label">New notebook</a>
 			</div>
 			<div class="nav__content">
-				<div class="nav__item" contenteditable="true">
-					Taucraft Elementary
+				<div class="nav__item-out">
+					<div class="nav__item" contenteditable="true">
+						Taucraft Elementary
+					</div>
 					<div class="nav__item-point" contenteditable="false">
 						<span></span>
 						<span></span>
@@ -34,23 +36,10 @@
 						</div>	
 					</div>
 				</div>
-				<div class="nav__item" contenteditable="true">My Dictionary
-					<div class="nav__item-point" contenteditable="false">
-						<span></span>
-						<span></span>
-						<span></span>
-					</div>					
-					<div class="nav__item-popup" contenteditable="false">
-						<div class="nav__item-roll nav__item-lose">
-							You will lose 24 points	
-						</div>						
-						<div class="nav__item-roll link-out">	
-							<a href="#" class="nav__item-link">Rename</a>
-							<a href="#" class="nav__item-link">Remove</a>
-						</div>	
+				<div class="nav__item-out">
+					<div class="nav__item" contenteditable="true">
+						My Dictionary
 					</div>
-				</div>
-				<div class="nav__item" contenteditable="true">Grammatic
 					<div class="nav__item-point" contenteditable="false">
 						<span></span>
 						<span></span>
@@ -66,7 +55,10 @@
 						</div>	
 					</div>
 				</div>
-				<div class="nav__item" contenteditable="true">New notebook 1
+				<div class="nav__item-out">
+					<div class="nav__item" contenteditable="true">
+						Gramattic
+					</div>
 					<div class="nav__item-point" contenteditable="false">
 						<span></span>
 						<span></span>
@@ -82,6 +74,37 @@
 						</div>	
 					</div>
 				</div>
+				<div class="nav__item-out">
+					<div class="nav__item" contenteditable="true">
+						New notebook 1
+					</div>
+					<div class="nav__item-point" contenteditable="false">
+						<span></span>
+						<span></span>
+						<span></span>
+					</div>
+					<div class="nav__item-popup" contenteditable="false">
+						<div class="nav__item-roll nav__item-lose">
+							You will lose 24 points	
+						</div>						
+						<div class="nav__item-roll link-out">	
+							<a href="#" class="nav__item-link">Rename</a>
+							<a href="#" class="nav__item-link">Remove</a>
+						</div>	
+					</div>
+				</div>					
+
+
+
+
+
+
+
+
+
+
+
+
 			</div>
 		</nav>
 		<!--/.nav-->
