--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 			<div class="nav__content">
 				<div class="nav__item-out">
-					<div class="nav__item" contenteditable="true">
+					<div class="nav__item is-active" contenteditable="true">
 						Taucraft Elementary
 					</div>
 					<div class="nav__item-point" contenteditable="false">
@@ -32,7 +32,7 @@
 						</div>						
 						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
-							<a href="#" class="nav__item-link">Remove</a>
+							<a href="#" class="nav__item-link link-cancel">Remove</a>
 						</div>	
 					</div>
 				</div>
@@ -51,7 +51,7 @@
 						</div>						
 						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
-							<a href="#" class="nav__item-link">Remove</a>
+							<a href="#" class="nav__item-link link-cancel">Remove</a>
 						</div>	
 					</div>
 				</div>
@@ -70,7 +70,7 @@
 						</div>						
 						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
-							<a href="#" class="nav__item-link">Remove</a>
+							<a href="#" class="nav__item-link link-cancel">Remove</a>
 						</div>	
 					</div>
 				</div>
@@ -89,7 +89,7 @@
 						</div>						
 						<div class="nav__item-roll link-out">	
 							<a href="#" class="nav__item-link">Rename</a>
-							<a href="#" class="nav__item-link">Remove</a>
+							<a href="#" class="nav__item-link link-cancel">Remove</a>
 						</div>	
 					</div>
 				</div>					
@@ -143,6 +143,8 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non delectus excepturi, ab blanditiis cupiditate, similique fugit magnam sapiente repellat.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non delectus excepturi, ab blanditiis cupiditate, similique fugit magnam sapiente repellat.</p>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim non delectus excepturi, ab blanditiis cupiditate, similique fugit magnam sapiente repellat.</p>
+							<hr>
+							<br>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim beatae, quas officia nemo nostrum officiis. Asperiores repudiandae molestiae nostrum perferendis, voluptas quibusdam, suscipit fuga <em>excepturi</em> assumenda vero, eos cum vel.</p>		
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim beatae, quas officia nemo nostrum officiis. Asperiores repudiandae molestiae nostrum <em>perferendis</em>, voluptas quibusdam, suscipit fuga excepturi assumenda vero, eos cum vel.</p>
 						</div>	
